@@ -24,7 +24,7 @@ void dbg_setmask(unsigned long mask);
 void _dbg(unsigned long channel, const char *fmt, ...);
 char *dbg_fdsetstr(fd_set * set, int n, char *str, int len);
 char *dbg_tvstr(struct timeval *tv, char *str, int len);
-unsigned char *dbg_memstr(unsigned char *mem, int len);
+char *dbg_memstr(char *mem, int len);
 
 #ifdef NDEBUG
 #define dbg(channel, fmt...)
