@@ -118,7 +118,7 @@ bool tcp_finish_connect(Device * dev)
 {
     int rc;
     int error = 0;
-    int len = sizeof(err);
+    socklen_t len = sizeof(err);
     TcpDev *tcp;
 
     assert(dev->magic == DEV_MAGIC);
@@ -239,7 +239,7 @@ void tcp_preprocess(Device *dev)
     _telnet_preprocess(dev);
 }
 
-static void _telnet_sendopt(Device *dev, unsigned char cmd, unsigned char opt)
+static void _telnet_sendopt(Device *dev, int cmd, int opt)
 {
     unsigned char str[] = { IAC, cmd, opt };
     int n;
@@ -268,14 +268,14 @@ static void _telnet_sendcmd(Device *dev, unsigned char cmd)
 }
 #endif
 
-static void _telnet_recvcmd(Device *dev, unsigned char cmd)
+static void _telnet_recvcmd(Device *dev, int cmd)
 {
     dbg(DBG_TELNET, "%s: _telnet_recvcmd: %s", dev->name, 
             TELCMD_OK(cmd) ?  TELCMD(cmd) : "<unknown>");
 }
 
 
-static void _telnet_recvopt(Device *dev, unsigned char cmd, unsigned char opt)
+static void _telnet_recvopt(Device *dev, int cmd, int opt)
 {
     TcpDev *tcp = (TcpDev *)dev->data;
 
