@@ -95,8 +95,8 @@ void Free(void *ptr);
 char *Strdup(const char *str);
 int Accept(int fd, struct sockaddr_in *addr, socklen_t * addrlen);
 int Connect(int fd, struct sockaddr *addr, socklen_t addrlen);
-int Read(int fd, unsigned char *p, int max);
-int Write(int fd, unsigned char *p, int max);
+int Read(int fd, char *p, int max);
+int Write(int fd, char *p, int max);
 int Open(char *str, int flags, int mode);
 int Close(int fd);
 int Getaddrinfo(char *host, char *service, struct addrinfo *hints,
